<resources>
    <string name="app_name">ProyectoFinalApps</string>
    <string name="facebook_app_id">649013113120360</string>
    <string name="fb_login_protocol_scheme">fb649013113120360</string>



    <!-- activity-main -->
    <string name="welcome_main">BIENVENIDO</string>
    <string name="client_btn">Cliente</string>
    <string name="gym_btn">Gimnasio</string>

    <!-- activity_client -->
    <string name="client_wel_tv">CLIENTE</string>
    <string name="login_btn">Iniciar Sesión</string>
    <string name="register_btn">Registrarme</string>

    <!-- activity_gym -->
    <string name="gym_wel_tv">GIMNASIO</string>
    <string name="registermygym_btn">Registrar mi GYM</string>
    <string name="registerstaff_btn">Registrarme como STAFF</string>

    <!-- activity_login -->
    <string name="login_tv">INICIO DE SESIÓN</string>
    <string name="email_hint_et">Correo electrónico</string>
    <string name="password_hint_et">Contraseña</string>
    <string name="forgotpass_tv">Olvidaste tu contraseña</string>
    <string name="loginenter_btn">Ingresar</string>
    <string name="noaccount_tv">No tienes cuenta? Regístrate</string>

    <!-- activity_register_user -->
    <string name="register_tv">REGISTRO</string>
    <string name="namelastname_hint_tv">Nombre y Apellido</string>
    <string name="no_id_hint_tv">Número de documento</string>
    <string name="conf_pass_hint_tv">Confirmar contraseña</string>
    <string name="haveaccount_tv">Ya tienes cuenta? Inicia sesión</string>

    <!-- menu_client   -->
    <string name="profile_menu">Perfil</string>
    <string name="home_menu">Home</string>
    <string name="config_menu">Config</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- fragment_home_client -->
    <string name="welcome_frag">BIENVENIDO!</string>
    <string name="no_register_gym">No te encuentras registrado en ningún gimnasio.</string>
    <string name="code_qr_client">Lleva este código a tu gym para ser activado.</string>

    <!-- menu_staff   -->
    <string name="clientes_menu">Clientes</string>
    <string name="config_menu_staff">Config</string>

    <!-- fragment_home_staff -->
    <string name="cliens_staff">CLIENTES</string>
    <string name="allow_staf">Permitir entrada</string>
    <string name="activ_client">Activar cliente</string>

</resources>